test/errors/type/math/lcm2.yasl
math.lcm(2, .s)
