test/errors/type/math/lcm2.yasl.err
TypeError: math.lcm expected arg in position 1 to be of type float, got arg of type str. (line 1)
